target/classes/META-INF/fabric8/openshift/bazdigital-deploymentconfig.yml
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    fabric8.io/git-commit: 09c03deb8cb097550b4d60744396f6fe764f9254
    fabric8.io/iconUrl: img/icons/wildfly.svg
    fabric8.io/git-branch: master
    fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=bazdigital&var-version=1.0.0-SNAPSHOT
  labels:
    app: bazdigital
    provider: fabric8
    version: 1.0.0-SNAPSHOT
    group: com.bazdigital
  name: bazdigital
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    app: bazdigital
    provider: fabric8
    group: com.bazdigital
  strategy:
    rollingParams:
      timeoutSeconds: 3600
    type: Rolling
  template:
    metadata:
      annotations:
        fabric8.io/git-commit: 09c03deb8cb097550b4d60744396f6fe764f9254
        fabric8.io/iconUrl: img/icons/wildfly.svg
        fabric8.io/git-branch: master
        fabric8.io/metrics-path: dashboard/file/kubernetes-pods.json/?var-project=bazdigital&var-version=1.0.0-SNAPSHOT
      labels:
        app: bazdigital
        provider: fabric8
        version: 1.0.0-SNAPSHOT
        group: com.bazdigital
    spec:
      containers:
      - env:
        - name: KUBERNETES_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        image: bazdigital:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 180
        name: thorntail-v2
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        - containerPort: 9779
          name: prometheus
          protocol: TCP
        - containerPort: 8778
          name: jolokia
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
        securityContext:
          privileged: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - thorntail-v2
      from:
        kind: ImageStreamTag
        name: bazdigital:latest
    type: ImageChange
