target/classes/META-INF/fabric8/openshift/bazdigital-route.yml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    expose: "true"
    app: bazdigital
    provider: fabric8
    version: 1.0.0-SNAPSHOT
    group: com.bazdigital
  name: bazdigital
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: bazdigital
